# PLATEAU-VIEW-3.0

./: .gitignore  README.md  go.work  go.work.sum
.github/: CODEOWNER  labeler.yml
.github/workflows/: build-geo.yml  build-server.yml  build-tiles.yml  build-worker.yml  ci-ar.yml  ci-bff.yml  ci-extension-version-update.yml  ci-extension.yml  ci-geo.yml  ci-plugin-version-update.yml  ci-plugin.yml  ci-server.yml  ci-tiles.yml  ci-tools.yml  ci-worker.yml  ci.yml  cron-ion-token-prod.yml  deploy-ar-dev.yml  deploy-ar-prod.yml  deploy-cms-dev.yml  (+32 more)
ar/: package.json
docs/: storytelling.md
extension/: .env.example  .eslintrc.cjs  .gitignore  README.md  attributes.txt  attributes_raw.csv  attributes_raw_v3.csv  attributes_v3_raw.csv  codegen.ts  codegen_plateau.ts  package.json  reearth-yml.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
geo/: .env.example  .eslintrc.js  .gitignore  Dockerfile  maplibre.html  package.json  tsconfig.json
plateau-api-migrator/: .env.example  package.json
plugin/: .eslintrc.yml  package.json  tsconfig.json  vite.config.datacatalog-web.ts  vite.config.datacatalog.ts  vite.config.sidebar-web.ts  vite.config.sidebar.ts  vite.config.template.ts  vite.config.ts
server/: .gitignore  Dockerfile  config.go  echo.go  go.mod  go.sum  main.go  proxy.go  service.go
terraform/: .terraform.lock.hcl  README.md  output.tf  terraform.tf
tiles/: Dockerfile  README.md  package.json
tools/: Cargo.toml  convert.go  convert_test.go  go.mod  go.sum  main.go
tools/plateau-view-tool/: Cargo.toml
worker/: Dockerfile  go.mod  go.sum  main.go
(+1858 files in other folders)
