[package]
name = "plateau-view-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
fs_extra = "1.3.0"
rayon = "1.9.0"
regex = "1.10.3"
sevenz-rust= { version = "0.5.4", features = ["compress"] }
tempdir = "0.3.7"
thiserror = "1.0.58"
walkdir = "2.5.0"
zip = "0.6.6"
